@@ -15,6 +15,7 @@
  * functions for find declarations and refrences of java methods and members
  * Error highlighting in code
  * Support for auto-complete-mode
+ * eclimd module to start/stop eclimd from emacs
 
 === Bugfixes
  * fixed a problem on startup when the eclimd server was not started
